[gd_scene load_steps=7 format=2]

[ext_resource path="res://Quicksand-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Quicksand-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 799.0
margin_bottom = 449.0
color = Color( 0.2, 0.596078, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 531.0
margin_bottom = 203.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 511.0
margin_bottom = 183.0
custom_constants/separation = 50

[node name="Game Name" type="Label" parent="UI/VBoxContainer"]
margin_right = 491.0
margin_bottom = 87.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.38, 0.38, 0.38, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Lareata
"

[node name="NewGameUIMargin" type="MarginContainer" parent="UI/VBoxContainer"]
margin_top = 137.0
margin_right = 491.0
margin_bottom = 163.0
custom_constants/margin_left = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameUI" type="HBoxContainer" parent="UI/VBoxContainer/NewGameUIMargin"]
margin_right = 491.0
margin_bottom = 26.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="UI/VBoxContainer/NewGameUIMargin/NewGameUI"]
margin_right = 102.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.5, 0.5, 0.5, 1 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "New Game"

[node name="SeedLabel" type="Label" parent="UI/VBoxContainer/NewGameUIMargin/NewGameUI"]
margin_left = 132.0
margin_top = 3.0
margin_right = 182.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Seed: "

[node name="SeedSelect" type="SpinBox" parent="UI/VBoxContainer/NewGameUIMargin/NewGameUI"]
margin_left = 212.0
margin_right = 286.0
margin_bottom = 26.0
max_value = 4e+09
value = 2022.0

[connection signal="pressed" from="UI/VBoxContainer/NewGameUIMargin/NewGameUI/NewGame" to="." method="_on_NewGame_pressed"]
